# caldura-private

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  DECISIONS.md  README.md  package.json  vercel.json
.claude/skills/autoplan/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/benchmark-models/: SKILL.md
.claude/skills/browse/: SKILL.md
.claude/skills/canary/: SKILL.md
.claude/skills/careful/: SKILL.md
.claude/skills/codex/: SKILL.md
.claude/skills/connect-chrome/: SKILL.md
.claude/skills/context-restore/: SKILL.md
.claude/skills/context-save/: SKILL.md
.claude/skills/cso/: SKILL.md
.claude/skills/design-consultation/: SKILL.md
.claude/skills/design-html/: SKILL.md
.claude/skills/design-review/: SKILL.md
.claude/skills/design-shotgun/: SKILL.md
.claude/skills/devex-review/: SKILL.md
api/: agentmail-webhook.js  agentmail-webhook.test.js  customers.js  email-preview.js  email-status.js  email-status.test.js  eval.js  health.js  intake.js  search.js
api/_lib/: agentmail.js  agentmail.test.js  auth.js  auth.test.js  catalog.js  catalog.test.js  email.js  email.test.js  env.js
api/data/: order_history.csv
crates/catalog-server/: Cargo.toml
crates/catalog-server/src/: auth.rs  email.rs  main.rs  parser.rs  profile.rs  repair.rs  routes.rs  search.rs  types.rs
data/: demo_golden_cases.json  hard_negative_cases.json  repair_contexts.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  env.ts  index.css  main.tsx  vite-env.d.ts
(+52 files in other folders)
